--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <title>PDF Join</title>
-  <h1>PDF Join/h1>
+  <h1>PDF Join</h1>
   <form action="/upload/" method=post enctype=multipart/form-data>
     <p><input type=file name=file>
        <input type=submit value=Upload>
