--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,25 @@
 <!doctype html>
 <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik+Mono+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <script src="{{ url_for('static', filename='main.js') }}"></script>
 </head>
 <body>
   <title>PDF Join</title>
-  <h1>PDF Join</h1>
-  <form action="/upload/" method=post enctype=multipart/form-data>
-    <p><input type=file name=file>
-       <input type=submit value=Upload>
-  </form>
-  <div class ="outer">
-    <p>
-    <form class="buttons" action="/merge/" method=post>
-        <button name="merge_button" type="submit">Merge</button>
+  <div class="outer-box">
+    <h1>PDF Join</h1>
+    <form action="/upload/" method=post enctype=multipart/form-data>
+      <p><input class="input-file" type=file name=file data-multiple-caption="{count} files selected" multiple />
+          <label for="file"><span class='button-text'>Choose a file</span></label>
+          <button class="buttons" name="upload_button" type="submit"><i class="material-icons">file_upload</i></button>
     </form>
-  </p>
+    <div class ="outer">
+      <p>
+      <form action="/merge/" method=post>
+          <button class="buttons" name="merge_button" type="submit"><i class="material-icons">file_download</i><span class='button-text'>Merge</span></button>
+      </form>
+    </p>
+    </div>
   </div>
 </body>
