Finished frontend and backend work!

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,34 @@
 <!doctype html>
 <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik+Mono+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One|Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <script src="{{ url_for('static', filename='main.js') }}"></script>
 </head>
+
 <body>
   <title>PDF Join</title>
   <div class="outer-box">
     <h1>PDF Join</h1>
+    <h5>Upload pdfs in the order you want them arranged and get a merged file immmediately!<h5>
     <form action="/upload/" method=post enctype=multipart/form-data>
-      <p><input class="input-file" type=file name=file data-multiple-caption="{count} files selected" multiple />
-          <label for="file"><span class='button-text'>Choose a file</span></label>
-          <button class="buttons" name="upload_button" type="submit"><i class="material-icons">file_upload</i></button>
+      <p><input class="input-file" id='input-file' type=file name=file />
+          <label for="file"><span class='button-text' id='upload-text'>Choose a file</span></label>
+          <input class='upload-file' name="upload_button" type="submit"/>
+          <label for='upload_button'><i class="material-icons">file_upload</i><label>
+          {% for message in error %}
+            <script>
+              alert({{message}})
+            </script>
+          {% endfor %}
     </form>
+
+
+
+    <table>
+      {% for files in file_names %}
+        <tr><td>{{ files.name }}</td></tr>
+      {% endfor %}
+    </table>
     <div class ="outer">
       <p>
       <form action="/merge/" method=post>
